src/libqpainter.h

typedef QPainter::PixmapFragment QPainter__PixmapFragment;
typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QGlyphRun QGlyphRun;
typedef struct QImage QImage;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPainter__PixmapFragment QPainter__PixmapFragment;
typedef struct QPicture QPicture;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QStaticText QStaticText;
typedef struct QTextItem QTextItem;
void QPainter_DrawConvexPolygon2(QPainter* self, QPoint* points, int pointCount);
void QPainter_DrawArc(QPainter* self, QRectF* rect, int a, int alen);
void QPainter_DrawArc2(QPainter* self, QRect* param1, int a, int alen);
void QPainter_DrawArc3(QPainter* self, int x, int y, int w, int h, int a, int alen);
void QPainter_DrawPie(QPainter* self, QRectF* rect, int a, int alen);
void QPainter_DrawPie2(QPainter* self, int x, int y, int w, int h, int a, int alen);
void QPainter_DrawPie3(QPainter* self, QRect* param1, int a, int alen);
void QPainter_DrawChord(QPainter* self, QRectF* rect, int a, int alen);
void QPainter_DrawChord2(QPainter* self, int x, int y, int w, int h, int a, int alen);
void QPainter_DrawChord3(QPainter* self, QRect* param1, int a, int alen);
void QPainter_DrawRoundedRect(QPainter* self, QRectF* rect, double xRadius, double yRadius);
void QPainter_DrawRoundedRect2(QPainter* self, int x, int y, int w, int h, double xRadius, double yRadius);
void QPainter_DrawRoundedRect3(QPainter* self, QRect* rect, double xRadius, double yRadius);
void QPainter_DrawTiledPixmap(QPainter* self, QRectF* rect, QPixmap* pm);
void QPainter_DrawTiledPixmap2(QPainter* self, int x, int y, int w, int h, QPixmap* param5);
void QPainter_DrawTiledPixmap3(QPainter* self, QRect* param1, QPixmap* param2);
void QPainter_DrawPicture(QPainter* self, QPointF* p, QPicture* picture);
void QPainter_DrawPicture2(QPainter* self, int x, int y, QPicture* picture);
void QPainter_DrawPicture3(QPainter* self, QPoint* p, QPicture* picture);
void QPainter_DrawPixmap(QPainter* self, QRectF* targetRect, QPixmap* pixmap, QRectF* sourceRect);
void QPainter_DrawPixmap2(QPainter* self, QRect* targetRect, QPixmap* pixmap, QRect* sourceRect);
void QPainter_DrawPixmap3(QPainter* self, int x, int y, int w, int h, QPixmap* pm, int sx, int sy, int sw, int sh);
void QPainter_DrawPixmap4(QPainter* self, int x, int y, QPixmap* pm, int sx, int sy, int sw, int sh);
void QPainter_DrawPixmap5(QPainter* self, QPointF* p, QPixmap* pm, QRectF* sr);
void QPainter_DrawPixmap6(QPainter* self, QPoint* p, QPixmap* pm, QRect* sr);
void QPainter_DrawPixmap7(QPainter* self, QPointF* p, QPixmap* pm);
void QPainter_DrawPixmap8(QPainter* self, QPoint* p, QPixmap* pm);
void QPainter_DrawPixmap9(QPainter* self, int x, int y, QPixmap* pm);
void QPainter_DrawPixmap10(QPainter* self, QRect* r, QPixmap* pm);
void QPainter_DrawPixmap11(QPainter* self, int x, int y, int w, int h, QPixmap* pm);
void QPainter_DrawPixmapFragments(QPainter* self, QPainter__PixmapFragment* fragments, int fragmentCount, QPixmap* pixmap);
void QPainter_DrawImage(QPainter* self, QRectF* targetRect, QImage* image, QRectF* sourceRect);
void QPainter_DrawImage2(QPainter* self, QRect* targetRect, QImage* image, QRect* sourceRect);
void QPainter_DrawImage3(QPainter* self, QPointF* p, QImage* image, QRectF* sr);
void QPainter_DrawImage4(QPainter* self, QPoint* p, QImage* image, QRect* sr);
void QPainter_DrawImage5(QPainter* self, QRectF* r, QImage* image);
void QPainter_DrawImage6(QPainter* self, QRect* r, QImage* image);
void QPainter_DrawImage7(QPainter* self, QPointF* p, QImage* image);
void QPainter_DrawImage8(QPainter* self, QPoint* p, QImage* image);
void QPainter_DrawImage9(QPainter* self, int x, int y, QImage* image);
void QPainter_SetLayoutDirection(QPainter* self, int direction);
int QPainter_LayoutDirection(const QPainter* self);
void QPainter_DrawGlyphRun(QPainter* self, QPointF* position, QGlyphRun* glyphRun);
void QPainter_DrawStaticText(QPainter* self, QPointF* topLeftPosition, QStaticText* staticText);
void QPainter_DrawStaticText2(QPainter* self, QPoint* topLeftPosition, QStaticText* staticText);
void QPainter_DrawStaticText3(QPainter* self, int left, int top, QStaticText* staticText);
void QPainter_DrawText(QPainter* self, QPointF* p, libqt_string s);
void QPainter_DrawText2(QPainter* self, QPoint* p, libqt_string s);
void QPainter_DrawText3(QPainter* self, int x, int y, libqt_string s);
void QPainter_DrawText4(QPainter* self, QPointF* p, libqt_string str, int tf, int justificationPadding);
void QPainter_DrawText5(QPainter* self, QRectF* r, int flags, libqt_string text);
void QPainter_DrawText6(QPainter* self, QRect* r, int flags, libqt_string text);
void QPainter_DrawText7(QPainter* self, int x, int y, int w, int h, int flags, libqt_string text);
void QPainter_DrawText8(QPainter* self, QRectF* r, libqt_string text);
QRectF* QPainter_BoundingRect(QPainter* self, QRectF* rect, int flags, libqt_string text);
QRect* QPainter_BoundingRect2(QPainter* self, QRect* rect, int flags, libqt_string text);
QRect* QPainter_BoundingRect3(QPainter* self, int x, int y, int w, int h, int flags, libqt_string text);
QRectF* QPainter_BoundingRect4(QPainter* self, QRectF* rect, libqt_string text);
void QPainter_DrawTextItem(QPainter* self, QPointF* p, QTextItem* ti);
void QPainter_DrawTextItem2(QPainter* self, int x, int y, QTextItem* ti);
void QPainter_DrawTextItem3(QPainter* self, QPoint* p, QTextItem* ti);
void QPainter_FillRect(QPainter* self, QRectF* param1, QBrush* param2);
void QPainter_FillRect2(QPainter* self, int x, int y, int w, int h, QBrush* param5);
void QPainter_FillRect3(QPainter* self, QRect* param1, QBrush* param2);
void QPainter_FillRect4(QPainter* self, QRectF* param1, QColor* color);
void QPainter_FillRect5(QPainter* self, int x, int y, int w, int h, QColor* color);
void QPainter_FillRect6(QPainter* self, QRect* param1, QColor* color);
void QPainter_FillRect7(QPainter* self, int x, int y, int w, int h, int c);
void QPainter_FillRect8(QPainter* self, QRect* r, int c);
void QPainter_FillRect9(QPainter* self, QRectF* r, int c);
void QPainter_FillRect10(QPainter* self, int x, int y, int w, int h, int style);
void QPainter_FillRect11(QPainter* self, QRect* r, int style);
void QPainter_FillRect12(QPainter* self, QRectF* r, int style);
void QPainter_FillRect13(QPainter* self, int x, int y, int w, int h, int preset);
void QPainter_FillRect14(QPainter* self, QRect* r, int preset);
void QPainter_FillRect15(QPainter* self, QRectF* r, int preset);
void QPainter_EraseRect(QPainter* self, QRectF* param1);
void QPainter_EraseRect2(QPainter* self, int x, int y, int w, int h);
void QPainter_EraseRectWithQRect(QPainter* self, QRect* param1);
void QPainter_SetRenderHint(QPainter* self, int hint);
void QPainter_SetRenderHints(QPainter* self, int hints);
int QPainter_RenderHints(const QPainter* self);
bool QPainter_TestRenderHint(const QPainter* self, int hint);
QPaintEngine* QPainter_PaintEngine(const QPainter* self);
void QPainter_BeginNativePainting(QPainter* self);
void QPainter_EndNativePainting(QPainter* self);
void QPainter_SetClipRect22(QPainter* self, QRectF* param1, int op);
void QPainter_SetClipRect23(QPainter* self, QRect* param1, int op);