src/qt/libqpainter.bf

	[LinkName("QPainter_DrawConvexPolygon2")]
	public static extern void QPainter_DrawConvexPolygon2(Self* c_this, QPoint* points, int32 pointCount);
	[LinkName("QPainter_DrawArc")]
	public static extern void QPainter_DrawArc(Self* c_this, QRectF* rect, int32 a, int32 alen);
	[LinkName("QPainter_DrawArc2")]
	public static extern void QPainter_DrawArc2(Self* c_this, QRect* param1, int32 a, int32 alen);
	[LinkName("QPainter_DrawArc3")]
	public static extern void QPainter_DrawArc3(Self* c_this, int32 x, int32 y, int32 w, int32 h, int32 a, int32 alen);
	[LinkName("QPainter_DrawPie")]
	public static extern void QPainter_DrawPie(Self* c_this, QRectF* rect, int32 a, int32 alen);
	[LinkName("QPainter_DrawPie2")]
	public static extern void QPainter_DrawPie2(Self* c_this, int32 x, int32 y, int32 w, int32 h, int32 a, int32 alen);
	[LinkName("QPainter_DrawPie3")]
	public static extern void QPainter_DrawPie3(Self* c_this, QRect* param1, int32 a, int32 alen);
	[LinkName("QPainter_DrawChord")]
	public static extern void QPainter_DrawChord(Self* c_this, QRectF* rect, int32 a, int32 alen);
	[LinkName("QPainter_DrawChord2")]
	public static extern void QPainter_DrawChord2(Self* c_this, int32 x, int32 y, int32 w, int32 h, int32 a, int32 alen);
	[LinkName("QPainter_DrawChord3")]
	public static extern void QPainter_DrawChord3(Self* c_this, QRect* param1, int32 a, int32 alen);
	[LinkName("QPainter_DrawRoundedRect")]
	public static extern void QPainter_DrawRoundedRect(Self* c_this, QRectF* rect, double xRadius, double yRadius);
	[LinkName("QPainter_DrawRoundedRect2")]
	public static extern void QPainter_DrawRoundedRect2(Self* c_this, int32 x, int32 y, int32 w, int32 h, double xRadius, double yRadius);
	[LinkName("QPainter_DrawRoundedRect3")]
	public static extern void QPainter_DrawRoundedRect3(Self* c_this, QRect* rect, double xRadius, double yRadius);
	[LinkName("QPainter_DrawTiledPixmap")]
	public static extern void QPainter_DrawTiledPixmap(Self* c_this, QRectF* rect, QPixmap* pm);
	[LinkName("QPainter_DrawTiledPixmap2")]
	public static extern void QPainter_DrawTiledPixmap2(Self* c_this, int32 x, int32 y, int32 w, int32 h, QPixmap* param5);
	[LinkName("QPainter_DrawTiledPixmap3")]
	public static extern void QPainter_DrawTiledPixmap3(Self* c_this, QRect* param1, QPixmap* param2);
	[LinkName("QPainter_DrawPicture")]
	public static extern void QPainter_DrawPicture(Self* c_this, QPointF* p, QPicture* picture);
	[LinkName("QPainter_DrawPicture2")]
	public static extern void QPainter_DrawPicture2(Self* c_this, int32 x, int32 y, QPicture* picture);
	[LinkName("QPainter_DrawPicture3")]
	public static extern void QPainter_DrawPicture3(Self* c_this, QPoint* p, QPicture* picture);
	[LinkName("QPainter_DrawPixmap")]
	public static extern void QPainter_DrawPixmap(Self* c_this, QRectF* targetRect, QPixmap* pixmap, QRectF* sourceRect);
	[LinkName("QPainter_DrawPixmap2")]
	public static extern void QPainter_DrawPixmap2(Self* c_this, QRect* targetRect, QPixmap* pixmap, QRect* sourceRect);
	[LinkName("QPainter_DrawPixmap3")]
	public static extern void QPainter_DrawPixmap3(Self* c_this, int32 x, int32 y, int32 w, int32 h, QPixmap* pm, int32 sx, int32 sy, int32 sw, int32 sh);
	[LinkName("QPainter_DrawPixmap4")]
	public static extern void QPainter_DrawPixmap4(Self* c_this, int32 x, int32 y, QPixmap* pm, int32 sx, int32 sy, int32 sw, int32 sh);
	[LinkName("QPainter_DrawPixmap5")]
	public static extern void QPainter_DrawPixmap5(Self* c_this, QPointF* p, QPixmap* pm, QRectF* sr);
	[LinkName("QPainter_DrawPixmap6")]
	public static extern void QPainter_DrawPixmap6(Self* c_this, QPoint* p, QPixmap* pm, QRect* sr);
	[LinkName("QPainter_DrawPixmap7")]
	public static extern void QPainter_DrawPixmap7(Self* c_this, QPointF* p, QPixmap* pm);
	[LinkName("QPainter_DrawPixmap8")]
	public static extern void QPainter_DrawPixmap8(Self* c_this, QPoint* p, QPixmap* pm);
	[LinkName("QPainter_DrawPixmap9")]
	public static extern void QPainter_DrawPixmap9(Self* c_this, int32 x, int32 y, QPixmap* pm);
	[LinkName("QPainter_DrawPixmap10")]
	public static extern void QPainter_DrawPixmap10(Self* c_this, QRect* r, QPixmap* pm);
	[LinkName("QPainter_DrawPixmap11")]
	public static extern void QPainter_DrawPixmap11(Self* c_this, int32 x, int32 y, int32 w, int32 h, QPixmap* pm);
	[LinkName("QPainter_DrawPixmapFragments")]
	public static extern void QPainter_DrawPixmapFragments(Self* c_this, QPainter__PixmapFragment* fragments, int32 fragmentCount, QPixmap* pixmap);
	[LinkName("QPainter_DrawImage")]
	public static extern void QPainter_DrawImage(Self* c_this, QRectF* targetRect, QImage* image, QRectF* sourceRect);
	[LinkName("QPainter_DrawImage2")]
	public static extern void QPainter_DrawImage2(Self* c_this, QRect* targetRect, QImage* image, QRect* sourceRect);
	[LinkName("QPainter_DrawImage3")]
	public static extern void QPainter_DrawImage3(Self* c_this, QPointF* p, QImage* image, QRectF* sr);
	[LinkName("QPainter_DrawImage4")]
	public static extern void QPainter_DrawImage4(Self* c_this, QPoint* p, QImage* image, QRect* sr);
	[LinkName("QPainter_DrawImage5")]
	public static extern void QPainter_DrawImage5(Self* c_this, QRectF* r, QImage* image);
	[LinkName("QPainter_DrawImage6")]
	public static extern void QPainter_DrawImage6(Self* c_this, QRect* r, QImage* image);
	[LinkName("QPainter_DrawImage7")]
	public static extern void QPainter_DrawImage7(Self* c_this, QPointF* p, QImage* image);
	[LinkName("QPainter_DrawImage8")]
	public static extern void QPainter_DrawImage8(Self* c_this, QPoint* p, QImage* image);
	[LinkName("QPainter_DrawImage9")]
	public static extern void QPainter_DrawImage9(Self* c_this, int32 x, int32 y, QImage* image);
	[LinkName("QPainter_SetLayoutDirection")]
	public static extern void QPainter_SetLayoutDirection(Self* c_this, int64 direction);
	[LinkName("QPainter_LayoutDirection")]
	public static extern int64 QPainter_LayoutDirection(Self* c_this);
	[LinkName("QPainter_DrawGlyphRun")]
	public static extern void QPainter_DrawGlyphRun(Self* c_this, QPointF* position, QGlyphRun* glyphRun);
	[LinkName("QPainter_DrawStaticText")]
	public static extern void QPainter_DrawStaticText(Self* c_this, QPointF* topLeftPosition, QStaticText* staticText);
	[LinkName("QPainter_DrawStaticText2")]
	public static extern void QPainter_DrawStaticText2(Self* c_this, QPoint* topLeftPosition, QStaticText* staticText);
	[LinkName("QPainter_DrawStaticText3")]
	public static extern void QPainter_DrawStaticText3(Self* c_this, int32 left, int32 top, QStaticText* staticText);
	[LinkName("QPainter_DrawText")]
	public static extern void QPainter_DrawText(Self* c_this, QPointF* p, libqt_string s);
	[LinkName("QPainter_DrawText2")]
	public static extern void QPainter_DrawText2(Self* c_this, QPoint* p, libqt_string s);
	[LinkName("QPainter_DrawText3")]
	public static extern void QPainter_DrawText3(Self* c_this, int32 x, int32 y, libqt_string s);
	[LinkName("QPainter_DrawText4")]
	public static extern void QPainter_DrawText4(Self* c_this, QPointF* p, libqt_string str, int32 tf, int32 justificationPadding);
	[LinkName("QPainter_DrawText5")]
	public static extern void QPainter_DrawText5(Self* c_this, QRectF* r, int32 flags, libqt_string text);
	[LinkName("QPainter_DrawText6")]
	public static extern void QPainter_DrawText6(Self* c_this, QRect* r, int32 flags, libqt_string text);
	[LinkName("QPainter_DrawText7")]
	public static extern void QPainter_DrawText7(Self* c_this, int32 x, int32 y, int32 w, int32 h, int32 flags, libqt_string text);
	[LinkName("QPainter_DrawText8")]
	public static extern void QPainter_DrawText8(Self* c_this, QRectF* r, libqt_string text);
	[LinkName("QPainter_BoundingRect")]
	public static extern QRectF QPainter_BoundingRect(Self* c_this, QRectF* rect, int32 flags, libqt_string text);
	[LinkName("QPainter_BoundingRect2")]
	public static extern QRect QPainter_BoundingRect2(Self* c_this, QRect* rect, int32 flags, libqt_string text);
	[LinkName("QPainter_BoundingRect3")]
	public static extern QRect QPainter_BoundingRect3(Self* c_this, int32 x, int32 y, int32 w, int32 h, int32 flags, libqt_string text);
	[LinkName("QPainter_BoundingRect4")]
	public static extern QRectF QPainter_BoundingRect4(Self* c_this, QRectF* rect, libqt_string text);
	[LinkName("QPainter_DrawTextItem")]
	public static extern void QPainter_DrawTextItem(Self* c_this, QPointF* p, QTextItem* ti);
	[LinkName("QPainter_DrawTextItem2")]
	public static extern void QPainter_DrawTextItem2(Self* c_this, int32 x, int32 y, QTextItem* ti);
	[LinkName("QPainter_DrawTextItem3")]
	public static extern void QPainter_DrawTextItem3(Self* c_this, QPoint* p, QTextItem* ti);
	[LinkName("QPainter_FillRect")]
	public static extern void QPainter_FillRect(Self* c_this, QRectF* param1, QBrush* param2);
	[LinkName("QPainter_FillRect2")]
	public static extern void QPainter_FillRect2(Self* c_this, int32 x, int32 y, int32 w, int32 h, QBrush* param5);
	[LinkName("QPainter_FillRect3")]
	public static extern void QPainter_FillRect3(Self* c_this, QRect* param1, QBrush* param2);
	[LinkName("QPainter_FillRect4")]
	public static extern void QPainter_FillRect4(Self* c_this, QRectF* param1, QColor* color);
	[LinkName("QPainter_FillRect5")]
	public static extern void QPainter_FillRect5(Self* c_this, int32 x, int32 y, int32 w, int32 h, QColor* color);
	[LinkName("QPainter_FillRect6")]
	public static extern void QPainter_FillRect6(Self* c_this, QRect* param1, QColor* color);
	[LinkName("QPainter_FillRect7")]
	public static extern void QPainter_FillRect7(Self* c_this, int32 x, int32 y, int32 w, int32 h, int64 c);
	[LinkName("QPainter_FillRect8")]
	public static extern void QPainter_FillRect8(Self* c_this, QRect* r, int64 c);
	[LinkName("QPainter_FillRect9")]
	public static extern void QPainter_FillRect9(Self* c_this, QRectF* r, int64 c);
	[LinkName("QPainter_FillRect10")]
	public static extern void QPainter_FillRect10(Self* c_this, int32 x, int32 y, int32 w, int32 h, int64 style);
	[LinkName("QPainter_FillRect11")]
	public static extern void QPainter_FillRect11(Self* c_this, QRect* r, int64 style);
	[LinkName("QPainter_FillRect12")]
	public static extern void QPainter_FillRect12(Self* c_this, QRectF* r, int64 style);
	[LinkName("QPainter_FillRect13")]
	public static extern void QPainter_FillRect13(Self* c_this, int32 x, int32 y, int32 w, int32 h, int64 preset);
	[LinkName("QPainter_FillRect14")]
	public static extern void QPainter_FillRect14(Self* c_this, QRect* r, int64 preset);
	[LinkName("QPainter_FillRect15")]
	public static extern void QPainter_FillRect15(Self* c_this, QRectF* r, int64 preset);
	[LinkName("QPainter_EraseRect")]
	public static extern void QPainter_EraseRect(Self* c_this, QRectF* param1);
	[LinkName("QPainter_EraseRect2")]
	public static extern void QPainter_EraseRect2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QPainter_EraseRectWithQRect")]
	public static extern void QPainter_EraseRectWithQRect(Self* c_this, QRect* param1);
	[LinkName("QPainter_SetRenderHint")]
	public static extern void QPainter_SetRenderHint(Self* c_this, int64 hint);
	[LinkName("QPainter_SetRenderHints")]
	public static extern void QPainter_SetRenderHints(Self* c_this, int64 hints);
	[LinkName("QPainter_RenderHints")]
	public static extern int64 QPainter_RenderHints(Self* c_this);
	[LinkName("QPainter_TestRenderHint")]
	public static extern bool QPainter_TestRenderHint(Self* c_this, int64 hint);
	[LinkName("QPainter_PaintEngine")]
	public static extern QPaintEngine* QPainter_PaintEngine(Self* c_this);
	[LinkName("QPainter_BeginNativePainting")]
	public static extern void QPainter_BeginNativePainting(Self* c_this);
	[LinkName("QPainter_EndNativePainting")]
	public static extern void QPainter_EndNativePainting(Self* c_this);
	[LinkName("QPainter_SetClipRect22")]
	public static extern void QPainter_SetClipRect22(Self* c_this, QRectF* param1, int64 op);
	[LinkName("QPainter_SetClipRect23")]
	public static extern void QPainter_SetClipRect23(Self* c_this, QRect* param1, int64 op);
